# wingpanel-indicator-na-tray

./: .gitignore  README.md  meson.build
lib/: fixedtip.c  fixedtip.h  meson.build  na-grid.c  na-grid.h  na-host.c  na-host.h  na-item.c  na-item.h  na-marshal.c  na-marshal.h  na-tray-child.c  na-tray-child.h  na-tray-manager.c  na-tray-manager.h  na-tray.c  na-tray.h
src/: Indicator.vala  meson.build
vapi/: gtk_x11tray.vapi
